--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <img src="/assets/linepipe.png" class="apparatus-image line-pipe line-pipe-1"></img>
             <img  src="/assets/linepipe.png"  class="apparatus-image line-pipe line-pipe-2"></img>
             <img src="/assets/linepipe.png"  class="apparatus-image line-pipe line-pipe-3"></img>
+            <img src="/assets/linepipe.png"  class="apparatus-image line-pipe line-pipe-4"></img>
             <img src="/assets/elbow.png"  class="apparatus-image elbow elbow-1"></img>
             <img src="/assets/elbow.png"  class="apparatus-image elbow  elbow-2"></img>
             
@@ -88,7 +89,7 @@
                 <div class="tank-water">
                     <div class="tank-water-fill" id="tankWaterFill"></div>
                 </div>
-                <div class="label" style="bottom: 60px; margin-left: 636px;">pump</div>
+                <div class="label" style="top: 0px; margin-left: 636px;">pump</div>
             </div>
         </div>
     </div>
